bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: '=' expected but ';' found.
while (test !=true) {
^